--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -1,3 +1,22 @@
+@Article{Bengtsson:2021,
+  author = {Henrik Bengtsson},
+  title = {A Unifying Framework for Parallel and Distributed Processing in {R} using Futures},
+  year = {2021},
+  journal = {The R Journal},
+  doi = {10.32614/RJ-2021-048},
+  pages = {208--227},
+  volume = {13},
+  number = {2}
+}
+
+@Manual{Bengtsson:2023,
+  title = {progressr: An Inclusive, Unifying API for Progress Updates},
+  author = {Henrik Bengtsson},
+  year = {2023},
+  note = {R package version 0.14.0},
+  url = {https://CRAN.R-project.org/package=progressr}
+}
+
 @book{Bonnans:2006,
   title     = {Numerical optimization: theoretical and practical aspects},
   author    = {Bonnans, J.-F. and Gilbert, J. C. and Lemar{\'e}chal, C. and Sagastiz{\'a}bal, C. A.},
