--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -13,7 +13,7 @@
   title = {progressr: An Inclusive, Unifying API for Progress Updates},
   author = {Henrik Bengtsson},
   year = {2023},
-  note = {R package version 0.14.0},
+  note = {R package},
   url = {https://CRAN.R-project.org/package=progressr}
 }
 
@@ -28,7 +28,7 @@
   title     = {R6: Encapsulated Classes with Reference Semantics},
   author    = {Chang, W.},
   year      = {2021},
-  note      = {R package version 2.5.1},
+  note      = {R package},
   url       = {https://CRAN.R-project.org/package=R6}
 }
 
@@ -65,7 +65,7 @@
   title     = {optimizeR: Unified Framework for Numerical Optimizer},
   author    = {Oelschläger, L. and Ötting, M.},
   year      = {2023},
-  note      = {R package version 1.0.0},
+  note      = {R package},
   url       = {https://CRAN.R-project.org/package=optimizeR}
 }
 
