--- a/vignettes/ino.Rmd
+++ b/vignettes/ino.Rmd
@@ -71,7 +71,8 @@ library("ino")
 ```
 
 ```{r, load ino for real, include = FALSE}
-library("ino")
+#library("ino")
+devtools::load_all()
 ```
 
 ### Gaussian mixture model
