--- a/vignettes/example_hmm.Rmd
+++ b/vignettes/example_hmm.Rmd
@@ -25,17 +25,18 @@ knitr::opts_chunk$set(
   eval = FALSE
 )
 library("ino")
-options("ino_verbose" = TRUE) 
 data("Nop_hmm")
 set.seed(1)
 ggplot2::theme_set(ggplot2::theme_minimal())
 ```
 
-In this vignette^[The vignette was build using R `r paste(R.Version()[c("major","minor")], collapse = ".")` with the `{ino}` `r utils::packageVersion("ino")` package.] we describe the workflow of the `{ino}` package for fitting a hidden Markov model (HMM) through likelihood optimization. HMMs are statistical models used to explain systems that can only be observed indirectly through a sequence of outputs, and have unobservable hidden states. They consist of two processes, a Markov process that describes the hidden states, and an observable process that describes the outputs produced by the system, where the probability of observing an output at a given time depends only on the current state. State-switching models like HMMs are commonly used in speech recognition, animal movement modeling, bioinformatics, and finance. For more technical details about HMMs and their scope of application, see, e.g., @Zucchini:2016.
+HMMs are statistical models used to explain systems that can only be observed indirectly through a sequence of outputs, and have unobservable hidden states. They consist of two processes, a Markov process that describes the hidden states, and an observable process that describes the outputs produced by the system, where the probability of observing an output at a given time depends only on the current state. State-switching models like HMMs are commonly used in speech recognition, animal movement modeling, and finance. For more technical details about HMMs and their scope of application, see, e.g., @Zucchini:2016.
+
+Numerical likelihood optimization is a prominent method for fitting HMMs to empirical data. In this vignette^[The vignette was build using R `r paste(R.Version()[c("major","minor")], collapse = ".")` with the `{ino}` `r utils::packageVersion("ino")` package.] we describe the workflow of using the `{ino}` package for analyzing the initialization effect in this optimization task. 
 
 ## Application to financial data
 
-The example data set considered throughout this vignette covers a time series of log returns from the [German stock index DAX](https://en.wikipedia.org/wiki/DAX) over 30 years. The DAX closing prices are freely accessible via Yahoo Finance and can be downloaded via the `download_data()` function from the `{fHMM}` package [@Oelschläger:2023b]. They can easily be transformed to log returns using the `{dplyr}` package [@Wickham:2023]:
+The example data set considered throughout this vignette covers a time series of log returns from the [German stock index DAX](https://en.wikipedia.org/wiki/DAX) over 30 years. The DAX closing prices are freely accessible via [Yahoo Finance](https://finance.yahoo.com) and can be downloaded via the `download_data()` function from the `{fHMM}` package [@Oelschläger:2023b]. We transform them to log-returns using the `{dplyr}` package [@Wickham:2023]:
 
 ```{r, download dax data, message = FALSE, warning = FALSE, eval = TRUE}
 library("fHMM")
@@ -61,17 +62,17 @@ ggplot(dax, aes(x = date, y = logreturn)) +
   scale_y_continuous(labels = scales::label_percent())
 ```
 
-As the log returns are continuous and can take both negative and positive values, we consider an HMM with Gaussian state-dependent distributions --- note that some applications instead use t-distributions to also model the kurtosis [@Oelschläger:2021].
+As the log-returns are continuous and can take both negative and positive values, we consider an HMM with Gaussian state-dependent distributions --- note that some applications instead use t-distributions to also model the kurtosis [@Oelschläger:2021].
 
 ## Likelihood optimization
 
-We consider a 2-state (`N = 2`) Gaussian-HMM here to model bearish and bullish market periods. This results in six parameters (`npar = 6`) to be estimated:
+We consider a 2-state (`states = 2`) Gaussian-HMM (`sdds = "normal"`) here to model bearish and bullish market periods. This results in six parameters (`npar = 6`) to be estimated (to be optimized, respectively):
 
-- two identified parameters for the transition probability matrix (t.p.m.),
+- two identified parameters for the transition probability matrix,
 - two for the means of the state-dependent distributions,
 - two for the standard deviations of the state-dependent distributions.
 
-The likelihood for a Gaussian-HMM is given by the function `f_ll_hmm()` provided by the `{ino}` package. The argument `neg = TRUE` indicates that we minimize the negative log-likelihood, and `set_optimizer(optimizer_nlm())` selects the optimizer `stats::nlm()` (see the introductory vignette for more details on how to specify optimizers).
+The likelihood function `ll_hmm()` is provided by the `{fHMM}` package. The argument `negative = TRUE` indicates that we minimize the negative log-likelihood.
 
 ```{r, define ino object}
 Nop_hmm <- Nop$new(
@@ -81,39 +82,76 @@ Nop_hmm <- Nop$new(
   sdds = "normal",
   states = 2, 
   negative = TRUE
-)$
-set_optimizer(optimizeR::optimizer_nlm())
+)
 ```
+
+In this example, we optimize using the optimizer `stats::nlm()` (see the introductory vignette for more details on how to specify optimizers):
+
+```{r, set optimizer}
+Nop_hmm$set_optimizer(optimizeR::optimizer_nlm())
+```
+
+### Parallel optimization and progress updates
+
+For convenience, The `{ino}` package supports parallel computation of optimization runs based on the `{future}` package [@Bengtsson:2021] and printing progress messages based on the `{progressr}` package [@Bengtsson:2023]. 
+
+For example, calling
+
+```{r, parallel setting}
+future::plan(future::multisession, workers = 10)
+```
+
+uses parallel computation in 10 parallel R sessions, and calling
+
+```{r, progress setting}
+progressr::handlers(global = TRUE)
+```
+
+prints a progress bar.
 
 ### Random initialization
 
-Randomly chosen starting values is a first initialization approach:
+Choosing random starting values is a first naive initialization approach, which can be tested as follows:
 
-- As the first two starting values belong to the off-diagonal of the t.p.m., we draw starting values from a $\mathcal{U}(-2,-1)$ distribution --- as we use the multinomial logit link to ensure that the probabilities are between 0 and 1, a value of -1.5 correspond to probabilities of staying in state 1 or 2 of about 80\%. 
-- For the two means, we draw two random numbers from the standard normal distribution, as the time series above indicates that the most of the returns are fairly close to zero. 
-- The starting values for the standard deviations are drawn from a $\mathcal{U}(0.5,2)$ distribution (note that we exponentiate the standard deviations in the likelihood as they are constrained to be positive, and hence we log-transform the starting values).
+```{r}
+Nop_hmm$
+  initialize_random(runs = 100)$
+  optimize(optimization_label = "random_naive")
+```
 
-The `$optimize()` method with argument `initial = sampler` then performs `runs = 100` optimization runs with starting values drawn from the specified distributions:
+The method `initialize_random()` selects `runs = 100` random initial values, which are drawn from a standard normal distribution by default. Next, the `optimize()` method initiates optimization of the likelihood function starting from these values. The results are labeled as `"random_naive"` to facilitate comparison later.
 
-```{r, random initialization}
+Instead of drawing initial values from a standard normal distribution, users can define a custom sampler function, for example:
+
+```{r, naive random initialization}
 sampler <- function() {
   c(stats::runif(2, -2, -1), stats::rnorm(2), log(stats::runif(2, 0.5, 2)))
 }
-# TODO: set to 100 runs
+```
+
+This sampler is based on the following ideas:
+
+- As the first two starting values belong to the off-diagonal of the transition probability matrix, we draw starting values from a $\mathcal{U}(-2,-1)$ distribution --- the likelihood function uses the multinomial logit link to ensure that the probabilities are between $0$ and $1$, a value of $-1.5$ correspond to probabilities of staying in state 1 or 2 of about $80\%$. 
+- For the two means, we draw two random numbers from the standard normal distribution, as the time series above indicates that the log-returns vary around zero. 
+- The starting values for the standard deviations are drawn from a $\mathcal{U}(0.5,2)$ distribution (note that the likelihood function exponentiates the standard deviations as they are constrained to be positive, and hence we log-transform the starting values).
+
+The `optimize()` method then performs `runs = 100` optimizations with starting values drawn from the specified distributions:
+
+```{r, random initialization}
 Nop_hmm$
-  initialize_random(sampler = sampler, runs = 5, seed = 1)$
+  initialize_random(sampler = sampler, runs = 100, seed = 1)$
   optimize(optimization_label = "random")
 ```
 
-### Educated guesses
+### Grid initialization with educated guesses
 
-For selecting fixed starting values, we consider sets of starting values that fall in the ranges considered above. These can be considered as "educated guesses" and are likely to be close to the global optimum.
+Another initialization strategy that closely relates to specifying a custom sampler for the initial values is to make "educated guesses" and to consider a grid of these values as initialization. This can be implemented via the `initialize_grid()` method, where and `lower` and `upper` limits and `breaks` can be specified. Here, we consider a grid of 64 starting values that fall in the ranges considered above:
 
 ```{r, optimization of educated guesses}
 Nop_hmm$
   initialize_grid(
-    lower = c(-2, -2.5, -0.05, 0, log(0.1), log(0.75)),
-    upper = c(-2, -2.5, 0, 0.05, log(0.5), log(1)),
+    lower = c(-2, -2, -0.1, -0.1, log(0.1), log(0.1)),
+    upper = c(-1, -1, 0.1, 0.1, log(1), log(1)),
     breaks = 2
   )$
   optimize(optimization_label = "educated_guess")
@@ -121,14 +159,16 @@ Nop_hmm$
 
 ### Subset initialization
 
-Since the data set is large, containing a total of `r nrow(dax)` share return observations, it might be beneficial to obtain initial values by first fitting the model to a data subset. If the data subset is chosen small enough, estimation with the subset will be much faster. On the other hand, if the data subset is chosen large enough to still contain enough information, the estimates on the subset will already lie close to the estimates for the full model.
+Since the data set is large, containing a total of `r nrow(dax)` log-return observations, it might be beneficial to obtain initial values by first fitting the model to a data subset. If the data subset is chosen small enough, estimation with the subset will be much faster. On the other hand, if the data subset is chosen large enough to still contain enough information, the estimates on the subset will already lie close to the estimates for the full model and provide good initial values for the full optimization.
 
-To illustrate the subset initialization strategy, we consider the first quarter of observations, which can be extracted using the `$reduce()` method with arguments `how = "first"` and `prop = 0.25`. The starting values for the optimizations on this subset are drawn from the `sampler()` function defined above. We again use `$optimize()` to fit the HMM, but now to the data subset. With `$continue()`, we then use the estimates obtained from the optimization on the subset as initial values to fit the model to the entire data set. The entire data set is restored via `$reset_argument("data")`.^[If we were to skip the `$reset_argument()` step, all future optimization runs would be made on the subset.]
+To illustrate the subset initialization strategy, we consider the first quarter of observations, which can be extracted using the `reduce()` method with arguments `how = "first"` and `proportion = 0.25`. The starting values for the optimizations on this subset are drawn from the `sampler()` function defined above. We again use `optimize()` to fit the HMM, but now to the data subset. With `initialize_continue()`, we then use the estimates obtained from the optimization on the subset as initial values to fit the model to the entire data set. 
 
-```{r, subset initialization first}
+Finally, the entire data set is recovered via `fixed_argument("reset", argument_name = "observations")`. If we were to skip this step, all future optimization runs would be made on the subset.
+
+```{r, subset initialization}
 Nop_hmm$
-  reduce("observations", how = "first", prop = 0.25)$
-  initialize_random(sampler = sampler, runs = 10, seed = 1)$
+  reduce("observations", how = "first", proportion = 0.25)$
+  initialize_random(sampler = sampler, runs = 100, seed = 1)$
   optimize(optimization_label = "reduced")$
   fixed_argument("reset", argument_name = "observations")$
   initialize_continue("reduced")$
@@ -137,50 +177,74 @@ Nop_hmm$
 
 ## Standardize initialization
 
-The considered log returns range `r paste(c("from", "to"), round(range(dax$logreturn), 1), collapse = " ")`. Optimization might be facilitated by standardizing the data first. This idea can be tested via the `$standardize()` method:
+The considered log-returns range `r paste(c("from", "to"), round(range(dax$logreturn), 1), collapse = " ")`. Optimization might be facilitated by standardizing the data first. This idea can be tested via the `standardize()` method:
 
-```{r, standardize initialization}
+```{r, standardize initialization 1, eval = TRUE}
+Nop_hmm$standardize("observations")
+```
+
+The values used for the standardization can be extracted as follows:
+
+```{r, standardize initialization values, eval = TRUE}
+observations <- Nop_hmm$get_argument("observations")
+(center <- attr(observations, "center"))
+(scale <- attr(observations, "scale"))
+```
+
+Optimization proceeds as usual:
+
+```{r, standardize initialization 2}
 Nop_hmm$
-  standardize("observations")$
-  initialize_random(sampler = sampler, runs = 10, seed = 1)$
+  initialize_random(sampler = sampler, runs = 100, seed = 1)$
   optimize(optimization_label = "standardized")$
   fixed_argument(action = "reset", argument_name = "observations")
 ```
 
-Note that we again use `$reset_argument()` to obtain our actual (non-standardized) data set.
+Note that the results obtained on the standardized optimization problem could be back-transformed via:
+
+```{r, transform, eval = TRUE}
+transform <- function(x) {
+  c(x[1:2], x[3:4] * scale + center, log(exp(x[3:4]) * scale + center))
+}
+```
 
 ## Evaluating the optimization runs
 
 ### Global versus local optima
 
-Selecting the starting values for the HMM likelihood optimization is a well-known issue, as poor starting values may likely result in local optima.^[Other R packages designed to fit HMMs discuss this topic in more detail, see, e.g., @Michelot:2016.] We thus first evaluate the optimizations by comparing the likelihood values at convergence, which can be displayed using the `$optima()` method. Here,
+Selecting the starting values for the HMM likelihood optimization is a well-known issue, as poor starting values may likely result in local optima. We thus first evaluate the optimizations by comparing the likelihood values at convergence, which can be displayed using the `optima()` method. Here,
 
-- `sort_by = "value"` sorts the table by function value (in decreasing order^[By default, optimization is assumed to involve minimizing the target function. If instead the function is maximized, set `Nop_hmm$minimized <- FALSE` to reverse the ordering in the `$optima()` output.]),
-- `only_comparable = TRUE` excludes optimization results on the standardized or reduced data set,
+- `sort_by = "value"` sorts the table by function value,
 - `digitis = 0` ignores any decimal places.
 
 ```{r, overview of optima, eval = TRUE}
-Nop_hmm$optima(sort_by = "value", only_comparable = TRUE, digits = 0)
+Nop_hmm$optima(sort_by = "value", digits = 0)
 ```
 
 ```{r, get number of converged runs, include = FALSE, eval = TRUE}
 library("dplyr")
-optima <- Nop_hmm$optima(sort_by = "value", only_comparable = TRUE, digits = 0)
+optima <- Nop_hmm$optima(sort_by = "value", digits = 0)
 global <- optima %>% arrange(value) %>% slice(1) %>% pull(frequency)
 total <- sum(optima$frequency)
 local <- total - global
 ```
 
-The frequency table indicates that `r global` out of `r total` runs converged to the smallest (negative) log-likelihood value, which appears to be the global optimum (note that these are the negative log-likelihood values). However, in `r local` runs we apparantly got stuck in local optima.
+The frequency table indicates that `r global` out of `r total` runs converged to the smallest (negative) log-likelihood value, which appears to be the global optimum (note that these are the negative log-likelihood values). However, in `r local` runs we apparently got stuck in local optima.
 
-Using `summary()`, we now can investigate the optimum values (`"value"`), the corresponding parameter vectors (`"parameter"`), and the optimization times (`"seconds"`) of all runs (here, only the first ten are shown):^[The `$elements_available()` method provides an overview of all available optimization result elements.] 
+Using `summary()`, we now can investigate the optimum values (`"value"`), the corresponding parameter vectors (`"parameter"`), and the optimization times (`"seconds"`) of all runs (here, only the first ten are shown):
 
 ```{r, summary of results, eval = TRUE}
-summary(Nop_hmm, which_element = c("value", "parameter", "seconds")) %>% 
+Nop_hmm$summary(which_element = c("value", "parameter", "seconds"), digits = 2) %>%
   head(n = 10)
 ```
 
-The final parameter estimates (i.e., the parameters associated with the global optimum) can be accessed via `$best_parameter()` ...
+In addition, the `elements()` method provides an overview of all available optimization result elements:
+
+```{r, elements available, eval = TRUE}
+Nop_hmm$elements()
+```
+
+The final parameter estimates (i.e., the parameters associated with the global optimum) can be accessed via `best("parameter")` ...
 
 ```{r, best parameter, eval = TRUE}
 Nop_hmm$best("parameter")
@@ -192,31 +256,41 @@ Nop_hmm$best("parameter")
 Nop_hmm$best("value")
 ```
 
-Note that the attributes `"run"` and `"optimizer"` provide the information, in which optimization run and with which optimizer this estimate was obtained.
+Note that the attributes `".run_id"` and `".optimizer_label"` provide the information, in which optimization run and with which optimizer this result was obtained.
 
-We can compute the proportion of runs that lead to the apparent global optimum of `r format(as.numeric(Nop_hmm$best_value()), scientific = FALSE)` as follows:
+Next, we can compute the proportion of runs that lead to the apparent global optimum of `r format(as.numeric(Nop_hmm$best("value")), scientific = FALSE)` as follows (note that the standardized initialization approach cannot be compared to the other approaches here):
 
 ```{r, proportion of converged runs, eval = TRUE}
-summary(Nop_hmm, c("label", "value", "seconds"), global_optimum = "value < -22445", only_comparable = TRUE) %>% 
-  group_by(label) %>% 
+Nop_hmm$summary(
+  which_element = c("value", "seconds"), 
+  which_run = "comparable", 
+  add_identifier = ".optimization_label"
+) %>%
+  mutate(global_optimum = value < -22445) %>%
+  group_by(.optimization_label) %>%
   summarise(proportion = mean(global_optimum, na.rm = TRUE))
 ```
 
-While for the educated guesses about 55\% of the runs converge to the global optimum, the random initialization and subset initialization strategies get stuck more often in local optima. Note that the standardized initialization approach cannot be compared to the other approaches here.
-
 ### Optimization time
 
-The `plot()` function can be used to investigate the optimization times across initialization strategies (`by = "label"`).^[Setting `relative = FALSE` in the `plot()` call shows the absolute times.]  
+The `plot()` method can be used to investigate the optimization times across initialization strategies (`group_by = ".optimization_label"`).^[Setting `relative = FALSE` in the `plot()` call would show the absolute times.]  
 
-```{r, optimization-time, eval = TRUE}
-plot(Nop_hmm, by = "label")
+```{r, optimization-time, eval = TRUE, warning = FALSE, message = FALSE}
+Nop_hmm$plot(
+  which_run = c("comparable", "standardized", logical = "or"), 
+  group_by = ".optimization_label", relative = TRUE
+)
 ```
 
-Using the output provided by `summary()` and some data manipulation functions provided by the package `{dplyr}`, we can also compute summary statistics of interest, like the median computation time or standard deviation per strategy:
+We can also compute summary statistics of interest, like the median computation time or standard deviation per strategy:
 
 ```{r, summary statistics, warning = FALSE, message = FALSE, eval = TRUE}
-summary(Nop_hmm, c("label", "seconds")) %>% 
-  group_by(label) %>% 
+Nop_hmm$summary(
+  which_element = "seconds", 
+  which_run = c("comparable", "standardized", logical = "or"), 
+  add_identifier = ".optimization_label"
+) %>%
+  group_by(.optimization_label) %>%
   summarise(
     median_seconds = median(seconds, na.rm = TRUE),
     sd_seconds = sd(seconds, na.rm = TRUE)
@@ -224,6 +298,6 @@ summary(Nop_hmm, c("label", "seconds")) %>%
   arrange(median_seconds)
 ```
 
-The subset and the standardize approach can improve the median optimization time by a factor of about 2 in this example compared to the random initialization approach.
+The subset and the standardize approach can improve the median optimization time by a factor of about 2 in this example compared to the random initialization approach. Standardization also reduces standard deviation in computation time, indicating more stable optimization.
 
 ## References
