--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "70%"
 )
 ```
 
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/loelschlaeger/ino/branch/master/graph/badge.svg)](https://app.codecov.io/gh/loelschlaeger/ino?branch=master)
 <!-- badges: end -->
 
-The `{ino}` R package provides tools for the analysis of the initialization for numerical optimization. For detailed examples and usage instructions, please refer to the [vignettes](https://loelschlaeger.de/ino/articles/) accompanying the package.
+The `{ino}` R package provides tools for analyzing the initialization of numerical optimization. For detailed examples and usage instructions, please refer to the [package vignettes](https://loelschlaeger.de/ino/articles/).
 
 ## Installation
 
@@ -32,33 +32,27 @@ You can install the released version from [CRAN](https://CRAN.R-project.org) wit
 install.packages("ino")
 ```
 
-And the development version from [GitHub](https://github.com/) with:
-
-```{r, install dev, eval = FALSE}
-# install.packages("devtools")
-devtools::install_github("loelschlaeger/ino")
-```
-
 ## Example
 
-The [Ackley function](https://en.wikipedia.org/wiki/Ackley_function) has multiple local minima and one global minimum in the origin. 
+The [Ackley function](https://en.wikipedia.org/wiki/Ackley_function) has multiple local minima and one global minimum in the origin. We define the numerical optimization problem, including an optimization algorithm and initial values:
 
-```{r, ackley function}
-f_ackley <- function(x) {
-  stopifnot(is.numeric(x), length(x) == 2)
-  -20 * exp(-0.2 * sqrt(0.5 * (x[1]^2 + x[2]^2))) -
-    exp(0.5 * (cos(2 * pi * x[1]) + cos(2 * pi * x[2]))) + exp(1) + 20
-}
-f_ackley(c(0, 0))
+```{r, ackley def, message = FALSE}
+library("ino")
+Nop_ackley <- Nop$new(f = TestFunctions::TF_ackley, npar = 2)$
+  set_optimizer(optimizeR::Optimizer$new(which = "stats::nlm"))$
+  initialize_random(runs = 100)
+```
+
+We can visualize the surface and the initial values:
+
+```{r, ackley plot, message = FALSE}
+ggplot2::autoplot(Nop_ackley)
 ```
 
 The optimization result depends on the initial value:
 
-```{r, ackley demo, message = FALSE}
-library("ino")
-Nop$new(objective = f_ackley, npar = 2)$
-  set_optimizer(optimizeR::optimizer_nlm())$
-  initialize_random(runs = 100)$
+```{r, ackley opt, message = FALSE}
+Nop_ackley$
   optimize()$
   optima(digits = 2)
 ```
